--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	
+	<script>
+if (window.top === window.self) {
+            window.location.href = "./learning.html"
+        }
+  </script>
 	<meta charset="utf-8">
 	
 	<title>Level Devil</title>
